<resources>

    <string name="app_name">Nanny Droid</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Hasil</string>
    
    <!-- Action Bar action items -->
    
    <string name="action_help">Panduan</string>
    <string name="action_about">Tentang</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Daftar</item>
        <item >Mulai</item>
        <item >Peringkat</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_dock</item>
        <item>@drawable/ic_action_add_person</item>
        <item>@drawable/ic_action_play</item>
      	<item>@drawable/ic_action_group</item>
    </array>
    
    
    <!-- Question Menu Description -->
    <string name="etika">Soal Etika Babysitter</string>
    <string name="gizi">Soal Gizi Anak</string>
    <string name="kebersihan">Soal Kebersihan Babysitter</string>
    <string name="kesehatan">Soal Kesehatan Anak</string>
    <string name="perkembangan">Soal Perkembangan Anak</string>
    <string name="perlengkapan">Soal Perlengkapan Anak</string>
    <string name="psikologi">Soal Psikologi Anak</string>
    
    <!-- Result Question Menu Description -->
    <string name="hasiletika">Total Nilai Etika</string>
    <string name="hasilgizi">Total Nilai Gizi</string>
    <string name="hasilkebersihan">Total Nilai Kebersihan</string>
    <string name="hasilkesehatan">Total Nilai Kesehatan</string>
    <string name="hasilperkembangan">Total Nilai Perkembangan</string>
    <string name="hasilperlengkapan">Total Nilai Perlengkapan</string>
    <string name="hasilpsikologi">Total Nilai Psikologi</string>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
     <!-- XMl content Description -->
     <string name="trims">Terima Kasih Telah Mengikuti test berikut detil penilaian</string>
     <string name="state">Status</string>
     <string name="question">Question</string>
     <string name="answer">Answer</string>
     <string name="rank">Peringkat</string>
     <string name="mulai">Mulai</string>
     <string name="change_pass">Ganti Password Anda</string>
     <string name="gretting">Selamat Datang di Sistem Nanny Droid</string>
     <string name="gretting_reg">Registrasi ke Nanny Droid</string>
     <string name="congrat">Selamat kamu telah berhasil terdaftar</string>
     <string name="detail_regis">Detil Registrasi</string>
     <string name="reg_at">Waktu registrasi</string>
     <string name="login">Login</string>
     <string name="email">E-Mail</string>
     <string name="pass">Password</string>
     <string name="name">Nama</string>
     <string name="ktp">No KTP</string>
     <string name="ttl">Tempat dan Tanggal lahir</string>
     <string name="exmpl_ttl">Contoh: Garut, 31031990</string>
     <string name="edu">Pendidikan terakhir</string>
     <string name="exmpl_edu">Tidak Sekolah, SD, SMP, SLTA</string>
     <string name="username">Nama Akun</string>
     <string name="back_to_home">Kembali ke Menu Utama</string>
     <string name="back_login">Kembali ke Login</string>
     <string name="exmpl_user">Contoh: Neti990</string>
     <string name="register">Registrasi</string>
     <string name="registered">Registered</string>
     <string name="reset">Reset</string>
     <string name="forgot_pass">Lupa Password</string>
     <string name="chng_pass">Ganti Password</string>
     <string name="new_pass">Password Baru Anda</string>
     <string name="insert_email">Masukan Email Anda</string>
     <string name="cancel">Batal</string>
     <string name="logout">Log Out</string>
     <string name="home">Halaman Utama</string>
     <string name="register_at">Terdaftar pada</string>
     <string name="detail">Details Registrasi</string>
     <string name="oke">OK</string>

</resources>
