<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
                
		    <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/gretting"
		            android:id="@+id/textView" 
		            android:layout_marginTop="10dp"
		            android:layout_gravity="center"/>
		
		    <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/name"
		            android:id="@+id/textView2"
		            android:layout_marginLeft="10dp"
               		android:layout_marginTop="10dp"/>
		
		    <EditText
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:id="@+id/name"
		            android:hint="@string/name"/>
		
		    <TextView
		            android:layout_width="wrap_content"
					android:layout_height="wrap_content"
		            android:text="@string/ktp"
		            android:id="@+id/textView3"
		            android:layout_marginLeft="10dp"
               		android:layout_marginTop="10dp"/>
		
		    <EditText
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
		            android:id="@+id/ktp"
		            android:hint="@string/ktp"/>
		    
		    <TextView
		            android:layout_width="wrap_content"
					android:layout_height="wrap_content"
		            android:text="@string/ttl"
		            android:id="@+id/textView4"
		            android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"/>
		
		    <EditText
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
		            android:id="@+id/ttl"
		            android:hint="@string/exmpl_ttl"/>
		    
		    <TextView
		            android:layout_width="wrap_content"
					android:layout_height="wrap_content"
		            android:text="@string/edu"
		            android:id="@+id/textView5"
		            android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"/>
		
		    <EditText
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
		            android:id="@+id/edu"
		            android:hint="@string/exmpl_edu"/>
		    
		    <TextView
		        	android:layout_width="wrap_content"
					android:layout_height="wrap_content"
		        	android:text="@string/email"
		        	android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"/>
		     
		     <EditText
			        android:id="@+id/email"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
			        android:hint="@string/email"
			        android:inputType="textEmailAddress"/>
		
		    
		    <TextView
			        android:id="@+id/textView7"
			        android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:text="@string/username"
			        android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"/>
		    
		    <EditText
			        android:id="@+id/uname"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="@string/exmpl_user"/>
		    
		   <TextView
			        android:id="@+id/textView8"
			        android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:text="@string/pass"
			        android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"/>
		    
		    <EditText
		        android:id="@+id/pword"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/pass"
		        android:inputType="textPassword" />
		
		    <Button
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
		            android:text="@string/register"
		            android:id="@+id/register"/>
		
		    <Button
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
		            android:text="@string/cancel"
		            android:id="@+id/bktologin"/>
		    
		    <TextView
		            android:layout_width="fill_parent"
		           	android:layout_height="wrap_content"
		            android:textColor="#000000"
		            android:id="@+id/register_error"/>
		    </LinearLayout> 


</ScrollView>

