<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
             
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
         	android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/new_pass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_email" />

        <EditText
            android:id="@+id/forpas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
	      android:id="@+id/btnLL"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="10dp"
	      android:layout_below="@+id/linearLayout2">
        
		    <Button 
        		android:id="@+id/respass"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/oke"/>
		
		    <Button
		        android:id="@+id/bktolog"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/cancel"/>
  		</LinearLayout>

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnLL" />

</RelativeLayout>