<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chng_pass"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/new_pass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <EditText
            android:id="@+id/newpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <LinearLayout
	      android:id="@+id/btnLL"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="10dp"
	      android:layout_below="@+id/linearLayout2">
        
		    <Button 
        		android:id="@+id/btchangepass"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/oke"/>
		
		    <Button
		        android:id="@+id/btcancel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/cancel"/>
  		</LinearLayout>
    
    <TextView
        android:id="@+id/alertpass"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@+id/btnLL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    
</RelativeLayout>