<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   
    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtNama" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtNama"
        android:layout_alignBottom="@+id/txtNama"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/state" />

    <TextView
        android:id="@+id/txtKtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/txtTotal"
        android:layout_alignBottom="@+id/txtTotal"
        android:layout_alignLeft="@+id/txtNama"
        android:text="@string/ktp" />

</RelativeLayout>